js_demo_output.txt
cargo :    Compiling 
autocfg v1.5.0
At line:1 char:1
+ cargo run --bin 
js_demo 2>&1 | 
Out-File -FilePath 
js_demo_output.txt  
...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (   Compili   
 ng autocfg v1.5.0    
:String) [], Remo    
teException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
   Compiling 
crossbeam-utils 
v0.8.21
   Compiling 
rayon-core v1.13.0
   Compiling 
simd-adler32 v0.3.8
   Compiling either 
v1.15.0
   Compiling anyhow 
v1.0.100
   Compiling 
thiserror v2.0.17
   Compiling arrayvec 
v0.7.6
   Compiling zerocopy 
v0.8.31
   Compiling 
equator-macro v0.4.2
   Compiling 
zerocopy-derive 
v0.8.31
   Compiling 
thiserror-impl v2.0.17
   Compiling as-slice 
v0.2.1
   Compiling 
av-scenechange v0.14.1
   Compiling libc 
v0.2.178
   Compiling paste 
v1.0.15
   Compiling built 
v0.8.0
   Compiling 
miniz_oxide v0.8.9
   Compiling aligned 
v0.4.3
   Compiling 
arg_enum_proc_macro 
v0.3.4
   Compiling 
profiling-procmacros 
v1.0.17
   Compiling core2 
v0.4.0
   Compiling nom 
v8.0.0
   Compiling 
quick-error v2.0.1
   Compiling pastey 
v0.1.1
   Compiling y4m 
v0.8.0
   Compiling 
num-traits v0.2.19
   Compiling 
bitstream-io v4.9.0
   Compiling 
itertools v0.14.0
   Compiling 
profiling v1.0.17
   Compiling rav1e 
v0.8.1
   Compiling flate2 
v1.1.5
warning: unused 
import: `Arc`
 --> crates\dom\src\no
de.rs:4:17
  |
4 | use 
std::sync::{Arc, 
Weak, RwLock};
  |                 
^^^
  |
  = note: `#[warn(unus
ed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

warning: `dom` (lib) 
generated 1 warning 
(run `cargo fix --lib 
-p dom` to apply 1 
suggestion)
   Compiling 
fax_derive v0.2.0
   Compiling equator 
v0.4.2
   Compiling 
crossbeam-epoch 
v0.9.18
   Compiling 
aligned-vec v0.6.4
   Compiling 
num-derive v0.4.2
   Compiling 
simd_helpers v0.1.0
   Compiling 
noop_proc_macro v0.3.0
   Compiling 
crossbeam-deque v0.8.6
   Compiling 
new_debug_unreachable 
v1.0.6
   Compiling 
zune-core v0.4.12
   Compiling weezl 
v0.1.12
   Compiling imgref 
v1.12.0
   Compiling serde 
v1.0.228
   Compiling 
avif-serialize v0.8.6
   Compiling 
zune-inflate v0.2.54
   Compiling fdeflate 
v0.3.7
   Compiling lebe 
v0.5.3
   Compiling fax 
v0.2.6
   Compiling loop9 
v0.1.5
   Compiling 
zune-jpeg v0.4.21
   Compiling bytemuck 
v1.24.0
   Compiling 
byteorder-lite v0.1.0
   Compiling rgb 
v0.8.52
   Compiling 
num-integer v0.1.46
   Compiling v_frame 
v0.3.9
   Compiling pxfm 
v0.1.27
   Compiling rayon 
v1.11.0
   Compiling 
color_quant v1.1.0
   Compiling 
bit_field v0.10.3
   Compiling 
zune-core v0.5.0
   Compiling qoi 
v0.4.1
   Compiling 
image-webp v0.2.4
   Compiling gif 
v0.14.1
   Compiling url 
v2.5.7
   Compiling 
num-bigint v0.4.6
   Compiling png 
v0.18.0
   Compiling 
zune-jpeg v0.5.8
   Compiling 
lazy_static v1.5.0
   Compiling render 
v0.1.0 (C:\Users\IJXP\
Pictures\browser\crate
s\render)
   Compiling 
html_parser v0.1.0 (C:
\Users\IJXP\Pictures\b
rowser\crates\html_par
ser)
warning: variants 
`CommentStart` and 
`Doctype` are never 
constructed
  --> crates\html_pars
er\src\tokenizer.rs:56
:5
   |
40 | enum State {
   |      ----- 
variants in this enum
...
56 |     CommentStart,
   |     ^^^^^^^^^^^^
...
59 |     Doctype,
   |     ^^^^^^^
   |
   = note: `State` 
has derived impls for 
the traits `Clone` 
and `Debug`, but 
these are 
intentionally ignored 
during dead code 
analysis
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: field 
`current_token` is 
never read
  --> crates\html_pars
er\src\tokenizer.rs:69
:5
   |
66 | pub struct 
Tokenizer<'a> {
   |            
--------- field in 
this struct
...
69 |     
current_token: 
Option<Token>,
   |     ^^^^^^^^^^^^^

   Compiling ureq 
v2.12.1
warning: 
`html_parser` (lib) 
generated 2 warnings
   Compiling 
num-rational v0.4.2
   Compiling half 
v2.7.1
   Compiling 
av1-grain v0.2.5
   Compiling exr 
v1.74.0
   Compiling tiff 
v0.10.3
   Compiling 
maybe-rayon v0.1.1
   Compiling moxcms 
v0.7.11
   Compiling ravif 
v0.12.0
   Compiling image 
v0.25.9
   Compiling network 
v0.1.0 (C:\Users\IJXP\
Pictures\browser\crate
s\network)
   Compiling 
browser_core v0.1.0 (C
:\Users\IJXP\Pictures\
browser\crates\browser
_core)
warning: fields 
`bold`, `italic`, and 
`link` are never read
   --> crates\browser_
core\src\lib.rs:506:5
    |
502 | struct 
RenderItem {
    |        
---------- fields in 
this struct
...
506 |     bold: bool,
    |     ^^^^
507 |     italic: 
bool,
    |     ^^^^^^
508 |     link: 
Option<String>,
    |     ^^^^
    |
    = note: 
`RenderItem` has 
derived impls for the 
traits `Clone` and 
`Debug`, but these 
are intentionally 
ignored during dead 
code analysis
    = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: 
`browser_core` (lib) 
generated 1 warning
   Compiling browser 
v0.1.0 (C:\Users\IJXP\
Pictures\browser)
error[E0433]: failed 
to resolve: use of 
unresolved module or 
unlinked crate 
`js_engine`
   --> src\bin\js_demo
.rs:101:11
    |
101 |     match js_eng
ine::execute(code) {
    |           
^^^^^^^^^ use of 
unresolved module or 
unlinked crate 
`js_engine`
    |
    = help: if you 
wanted to use a crate 
named `js_engine`, 
use `cargo add 
js_engine` to add it 
to your `Cargo.toml`

For more information 
about this error, try 
`rustc --explain 
E0433`.
error: could not 
compile `browser` 
(bin "js_demo") due 
to 1 previous error
